Added parallellization to downloads

--- a/710_download_and_read_papers.ipynb
+++ b/710_download_and_read_papers.ipynb
@@ -25,7 +25,8 @@
     "\n",
     "import os\n",
     "import pandas as pd\n",
-    "from download_read import download_read_export"
+    "from download_read import download_read_export\n",
+    "import download_read"
    ]
   },
   {
@@ -34,11 +35,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "### Run full function\n",
+    "\n",
     "foods = ['wheat']#, 'rice', 'tuna', 'apple', 'coffee']\n",
     "hazards = ['heatwave']#, ['drought', 'heatwave', 'warming', 'storm', 'flooding']\n",
     "API_Key = 'sec_6LIDxgLBHBqmhkVam818PYYXqervcPSX' #make a user and get api key from https://www.chatpdf.com/docs/api/backend\n",
     "scholar_pages = [1,2]\n",
-    "scholar_results = 5\n",
+    "scholar_results = 10\n",
     "question  = 'default' #f'1a) provide a quote from the text about how {hazard} impacts {food}? 2a) in what region is this study 3a) does {hazard} negatively or positively impact {food} (reply only negatvie/positive) 4a) exactly how is {food} impacted?'\n",
     "\n",
     "# Create an empty dataframe to store the results\n",
@@ -64,6 +67,34 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###### PARRALALIZE DOWNLOADS  ##########\n",
+    "\n",
+    "from multiprocessing import Process\n",
+    "\n",
+    "foods = ['tuna', 'rice', 'pear', 'apple', 'coffee', 'lettuce', 'beans']\n",
+    "hazards = 'storm' #, ['drought', 'heatwave', 'warming', 'storm', 'flooding']\n",
+    "scholar_pages = [1,2]\n",
+    "scholar_results = 10\n",
+    " \n",
+    "if __name__ == '__main__':\n",
+    "    # create all tasks\n",
+    "    processes = [Process(target=download_read.download_papers, args=(foods[i],hazard, scholar_pages, scholar_results, True)) for i in range(7)]\n",
+    "    # start all processes\n",
+    "    for process in processes:\n",
+    "        process.start()\n",
+    "    # wait for all processes to complete\n",
+    "    for process in processes:\n",
+    "        process.join()\n",
+    "    # report that all tasks are completed\n",
+    "    print('Done', flush=True)\n"
+   ]
   },
   {
    "cell_type": "code",
