--- a/710_download_and_read_papers_WFunctions.ipynb
+++ b/710_download_and_read_papers_WFunctions.ipynb
@@ -48,9 +48,11 @@
     "    # specify download folder\n",
     "    folder_name = f'{food}_{hazard}'\n",
     "    dwn_dir = os.path.join(os.getcwd(), folder_name)\n",
-    "    if os.path.exists(dwn_dir) and skip_if_folder_exists:\n",
+    "    if os.path.exists(dwn_dir):\n",
     "        pdfs = glob.glob(os.path.join(dwn_dir, '*.pdf'))\n",
-    "        print('found %d papers in the folder \"%s\"' %(len(pdfs), folder_name))\n",
+    "        if len(pdfs) > scholar_results and skip_if_folder_exists\n",
+    "            print('found %d papers in the folder \"%s\"' %(len(pdfs), folder_name))\n",
+    "            return pdfs\n",
     "    else: # not os.path.exists(dwn_dir)\n",
     "        os.mkdir(dwn_dir)\n",
     "        # make query:\n",
@@ -161,8 +163,7 @@
     "    elapsed_time = end_time - start_time\n",
     "    print(f'Time taken for \"{food}\" and \"{hazard}\":{elapsed_time:.2f} seconds')\n",
     "\n",
-    "\n",
-    "############# Run it\n"
+    "\n"
    ]
   },
   {
@@ -171,12 +172,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "############# Run it\n",
     "\n",
-    "foods = ['wheat']#, 'rice', 'tuna', 'apple', 'coffee']\n",
+    "foods = ['tuna']#, 'rice', 'tuna', 'apple', 'coffee']\n",
     "hazards = ['heatwave']#, ['drought', 'heatwave', 'warming', 'storm', 'flooding']\n",
     "API_Key = 'sec_6LIDxgLBHBqmhkVam818PYYXqervcPSX' #make a user and get api key from https://www.chatpdf.com/docs/api/backend\n",
-    "scholar_pages = [1,2]\n",
-    "scholar_results = 5\n",
+    "scholar_pages = [1]\n",
+    "scholar_results = 2\n",
     "question  = 'default' #f'1a) provide a quote from the text about how {hazard} impacts {food}? 2a) in what region is this study 3a) does {hazard} negatively or positively impact {food} (reply only negatvie/positive) 4a) exactly how is {food} impacted?'\n",
     "\n",
     "# Create an empty dataframe to store the results\n",
@@ -198,13 +200,6 @@
     "\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
