--- a/710_tests.ipynb
+++ b/710_tests.ipynb
@@ -122,11 +122,46 @@
    "source": [
     "dfall.to_csv('testdataentry.csv')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'foodname': ['Bocachico', 'Assegai tree', 'True water beetle', 'Chicken', 'Eincorn wheat grain', 'Potato ', 'Potato', 'Eggplant', 'Alaska pollock', 'Wheat'], 'species': ['Curimata cyprinoides', 'Curtisia dentata', 'Cybister limbatus', 'Gallus gallus', 'Triticum monococcum', 'Solanum tuberosum', 'Solanum stenotomum', 'Solanum malongena', 'Gadus chalcogrammus', 'Triticum aestivum'], 'other': ['Branquinha', 'Kulupi', 'Umlahleni', 'Cape Lancewood', 'Solanum stenotonum', 'Aubergine', 'Walleye pollock']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#test import csv foodlist\n",
+    "from download_read import import_foodlist\n",
+    "\n",
+    "foodlist = import_foodlist(\"Test food items.csv\")\n",
+    "print(foodlist)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
