added list tests, export csv columns based on list

--- a/710_tests.ipynb
+++ b/710_tests.ipynb
@@ -143,6 +143,95 @@
     "foodlist = import_foodlist(\"Test food items.csv\")\n",
     "print(foodlist)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "foodname\n",
+      "['Bocachico', 'Assegai tree', 'True water beetle', 'Chicken', 'Eincorn wheat grain', 'Potato ', 'Potato', 'Eggplant', 'Alaska pollock', 'Wheat']\n",
+      "species\n",
+      "['Curimata cyprinoides', 'Curtisia dentata', 'Cybister limbatus', 'Gallus gallus', 'Triticum monococcum', 'Solanum tuberosum', 'Solanum stenotomum', 'Solanum malongena', 'Gadus chalcogrammus', 'Triticum aestivum']\n",
+      "other\n",
+      "['Branquinha', 'Kulupi', 'Umlahleni', 'Cape Lancewood', 'Solanum stenotonum', 'Aubergine', 'Walleye pollock']\n"
+     ]
+    }
+   ],
+   "source": [
+    "for list in foodlist:\n",
+    "    print(f\"{list}\")\n",
+    "    print(foodlist[list])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n"
+     ]
+    }
+   ],
+   "source": [
+    "#test list split to different columns and run all functions\n",
+    "import download_read\n",
+    "from multiprocessing import Process\n",
+    "\n",
+    "foodlist = download_read.import_foodlist(\"Test food items.csv\")\n",
+    "hazards = ['Warming','Atmospheric CO2 Increase','Ocean Acidification','Drought','Precipitation','Storms','Ozone','Fires','Sea level rise','Floods','Heatwaves','Natural cover change']\n",
+    "API_Key = 'sec_6LIDxgLBHBqmhkVam818PYYXqervcPSX' #make a user and get api key from https://www.chatpdf.com/docs/api/backend\n",
+    "scholar_pages = [1,2]\n",
+    "scholar_results = 10\n",
+    "question  = 'default' #f'1a) provide a quote from the text about how {hazard} impacts {food}? 2a) in what region is this study 3a) does {hazard} negatively or positively impact {food} (reply only negatvie/positive) 4a) exactly how is {food} impacted?'\n",
+    "\n",
+    "for hazard in hazards:\n",
+    "   for list in foodlist:\n",
+    "      foods = foodlist[list]\n",
+    "      if __name__ == '__main__':\n",
+    "            # create all tasks\n",
+    "            processes = [Process(target=download_read.download_papers, args=(foods[i],hazard, scholar_pages, scholar_results, True)) for i in range(len(foods))]\n",
+    "            # start all processes\n",
+    "            for process in processes:\n",
+    "                process.start()\n",
+    "            # wait for all processes to complete\n",
+    "            for process in processes:\n",
+    "                process.join()\n",
+    "            # report that all tasks are completed\n",
+    "            print('Done', flush=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create an empty dataframe to store the results\n",
+    "dfall = pd.DataFrame(columns=['filename', 'foodname','species','othername', 'hazard', 'quote', 'location', 'pos/neg', 'how','howquote']) ## Specify a question in quotes or use the default: \"How does {hazard} impact {food}? can you provide a quote from the text about this?\"\n",
+    "skip_if_folder_exists = True ## dummy variable, if you have the data downloaded already and dont want to re-download it. defualt=True\n",
+    "\n",
+    "# Create an empty dataframe to store the results\n",
+    "#dfall = pd.DataFrame(columns=['food', 'hazard', 'quote', 'location', 'page', 'paragraph'])\n",
+    "\n",
+    "## Run function across combinations of food and hazard\n",
+    "for hazard in hazards:\n",
+    "   for list in foodlist:\n",
+    "      foods = foodlist[list]\n",
+    "      df = download_read_export(food, hazard, API_Key, scholar_pages=scholar_pages, scholar_results=scholar_results, question=question, skip_if_folder_exists = True)\n",
+    "      dfall = pd.concat([dfall, df], ignore_index=True)\n",
+    "\n",
+    "# Print the merged dataframe\n",
+    "print(dfall)"
+   ]
   }
  ],
  "metadata": {
