--- a/710_download_and_read_papers.ipynb
+++ b/710_download_and_read_papers.ipynb
@@ -74,7 +74,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "###### PARRALALIZE DOWNLOADS  ##########\n",
+    "###### PARALLELIZE DOWNLOADS  ##########\n",
     "\n",
     "from multiprocessing import Process\n",
     "\n",
