--- a/710_tests.ipynb
+++ b/710_tests.ipynb
@@ -215,6 +215,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import download_read\n",
+    "import pandas as pd\n",
+    "\n",
+    "foodlist = download_read.import_foodlist(\"Test food items.csv\")\n",
+    "hazards = ['Warming','Atmospheric CO2 Increase','Ocean Acidification','Drought','Precipitation','Storms','Ozone','Fires','Sea level rise','Floods','Heatwaves','Natural cover change']\n",
+    "API_Key = 'sec_6LIDxgLBHBqmhkVam818PYYXqervcPSX' #make a user and get api key from https://www.chatpdf.com/docs/api/backend\n",
+    "scholar_pages = [1,2]\n",
+    "scholar_results = 10\n",
+    "question  = 'default' #f'1a) provide a quote from the text about how {hazard} impacts {food}? 2a) in what region is this study 3a) does {hazard} negatively or positively impact {food} (reply only negatvie/positive) 4a) exactly how is {food} impacted?'\n",
+    "\n",
+    "\n",
     "# Create an empty dataframe to store the results\n",
     "dfall = pd.DataFrame(columns=['filename', 'foodname','species','othername', 'hazard', 'quote', 'location', 'pos/neg', 'how','howquote']) ## Specify a question in quotes or use the default: \"How does {hazard} impact {food}? can you provide a quote from the text about this?\"\n",
     "skip_if_folder_exists = True ## dummy variable, if you have the data downloaded already and dont want to re-download it. defualt=True\n",
@@ -226,10 +237,80 @@
     "for hazard in hazards:\n",
     "   for list in foodlist:\n",
     "      foods = foodlist[list]\n",
-    "      df = download_read_export(food, hazard, API_Key, scholar_pages=scholar_pages, scholar_results=scholar_results, question=question, skip_if_folder_exists = True)\n",
-    "      dfall = pd.concat([dfall, df], ignore_index=True)\n",
+    "      for food in foods:\n",
+    "         df = download_read.upload_analyze_papers(list,food, hazard, pdfs, API_Key, question='default')\n",
+    "         dfall = pd.concat([dfall, df], ignore_index=True)\n",
     "\n",
     "# Print the merged dataframe\n",
+    "print(dfall)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    filename           foodname species           othername  \\\n",
+      "0          x           Eggplant     NaN                 NaN   \n",
+      "1          x            Chicken     NaN                 NaN   \n",
+      "2          x  True water beetle     NaN                 NaN   \n",
+      "3          x     Alaska pollock     NaN                 NaN   \n",
+      "4          x          Bocachico     NaN                 NaN   \n",
+      "..       ...                ...     ...                 ...   \n",
+      "319        x                NaN     NaN     Walleye pollock   \n",
+      "320        x                NaN     NaN           Umlahleni   \n",
+      "321        x                NaN     NaN      Cape Lancewood   \n",
+      "322        x                NaN     NaN           Aubergine   \n",
+      "323        x                NaN     NaN  Solanum stenotonum   \n",
+      "\n",
+      "                   hazard  quote  location pos/neg  how  howquote  \n",
+      "0                 Warming  quote  location  posneg  how  howquote  \n",
+      "1                 Warming  quote  location  posneg  how  howquote  \n",
+      "2                 Warming  quote  location  posneg  how  howquote  \n",
+      "3                 Warming  quote  location  posneg  how  howquote  \n",
+      "4                 Warming  quote  location  posneg  how  howquote  \n",
+      "..                    ...    ...       ...     ...  ...       ...  \n",
+      "319  Natural cover change  quote  location  posneg  how  howquote  \n",
+      "320  Natural cover change  quote  location  posneg  how  howquote  \n",
+      "321  Natural cover change  quote  location  posneg  how  howquote  \n",
+      "322  Natural cover change  quote  location  posneg  how  howquote  \n",
+      "323  Natural cover change  quote  location  posneg  how  howquote  \n",
+      "\n",
+      "[324 rows x 10 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import download_read\n",
+    "\n",
+    "dfall = pd.DataFrame(columns=['filename', 'foodname','species','othername', 'hazard', 'quote', 'location', 'pos/neg', 'how','howquote']) ## Specify a question in quotes or use the default: \"How does {hazard} impact {food}? can you provide a quote from the text about this?\"\n",
+    "foodlist = download_read.import_foodlist(\"Test food items.csv\")\n",
+    "hazards = ['Warming','Atmospheric CO2 Increase','Ocean Acidification','Drought','Precipitation','Storms','Ozone','Fires','Sea level rise','Floods','Heatwaves','Natural cover change']\n",
+    "\n",
+    "\n",
+    "for hazard in hazards:\n",
+    "   for list in foodlist:\n",
+    "      foods = foodlist[list]\n",
+    "      for food in foods:\n",
+    "                row_data = {\n",
+    "                    'filename': 'x',\n",
+    "                    list: food,\n",
+    "                    'hazard': hazard,\n",
+    "                    'quote': 'quote',\n",
+    "                    'location': 'location',\n",
+    "                    'pos/neg': 'posneg',\n",
+    "                    'how': 'how',\n",
+    "                    'howquote': 'howquote'\n",
+    "                }\n",
+    "\n",
+    "                # Append the row data to the results\n",
+    "                dfall = pd.concat([dfall, pd.DataFrame([row_data])], ignore_index=True)\n",
+    "\n",
     "print(dfall)"
    ]
   }
