minor changes? starting notebook to compare prompt

--- a/710_tests.ipynb
+++ b/710_tests.ipynb
@@ -13,9 +13,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "import numpy as np \n",
+    "from multiprocessing import Process\n",
+    "import download_read\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Timing test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "###### PARALLELIZE DOWNLOADS  ##########\n",
     "\n",
-    "from multiprocessing import Process\n",
     "\n",
     "start_time = time.time()\n",
     "\n",
@@ -38,7 +57,42 @@
     "\n",
     "end_time = time.time() #stop timer\n",
     "elapsed_time = end_time - start_time\n",
-    "print(elapsed_time)"
+    "print(elapsed_time)\n",
+    "\n",
+    "# Anna: 3:03 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###### PARALLELIZE DOWNLOADS for food and hazard... ##########\n",
+    "start_time = time.time()\n",
+    "\n",
+    "foods = ['tuna', 'rice', 'pear', 'apple', 'coffee', 'lettuce', 'beans']\n",
+    "hazards = ['storm', 'drought', 'heatwave'] #, 'warming', 'storm', 'flooding']\n",
+    "scholar_pages = [1]\n",
+    "scholar_results = 3\n",
+    " \n",
+    "if __name__ == '__main__':\n",
+    "    # create all tasks\n",
+    "    processes = [Process(target=download_read.download_papers, args=(food, hazard, scholar_pages, scholar_results, True)) for food in foods for hazard in hazards]\n",
+    "    # start all processes\n",
+    "    for process in processes:\n",
+    "        process.start()\n",
+    "    # wait for all processes to complete\n",
+    "    for process in processes:\n",
+    "        process.join()\n",
+    "    # report that all tasks are completed\n",
+    "    print('Done', flush=True)\n",
+    "\n",
+    "end_time = time.time() #stop timer\n",
+    "elapsed_time = end_time - start_time\n",
+    "print(elapsed_time)\n",
+    "\n",
+    "## Anna: 7:33 - saves a little time"
    ]
   },
   {
@@ -64,6 +118,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Test against human annotated papers"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -78,11 +139,12 @@
     "\n",
     "dfall = pd.DataFrame(columns=['filename', 'food', 'hazard', 'quote', 'location', 'pos/neg', 'how']) ## Specify a question in quotes or use the default: \"How does {hazard} impact {food}? can you provide a quote from the text about this?\"\n",
     "\n",
-    "for i in range(0,len(foods)):\n",
-    "    df = download_read.download_read_export(foods[i], hazards[i], API_Key, scholar_pages, scholar_results, question, True)\n",
+    "##### not working because it needs a list? argument ######... put 'None'\n",
+    "for i in range(len(foods)):\n",
+    "    df = download_read.download_read_export(None, foods[i], hazards[i], API_Key, scholar_pages, scholar_results, question, True)\n",
     "    dfall = pd.concat([dfall, df], ignore_index=True)\n",
     "\n",
-    "print(dfall)"
+    "dfall # much easier to view without print statement"
    ]
   },
   {
@@ -102,7 +164,7 @@
     "    df = download_read.download_read_export(foods[i], hazards[i], API_Key, scholar_pages, scholar_results, question, True)\n",
     "    dfall = pd.concat([dfall, df], ignore_index=True)\n",
     "\n",
-    "print(dfall)"
+    "dfall"
    ]
   },
   {
@@ -111,7 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(dfall)"
+    "dfall"
    ]
   },
   {
@@ -125,62 +187,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'foodname': ['Bocachico', 'Assegai tree', 'True water beetle', 'Chicken', 'Eincorn wheat grain', 'Potato ', 'Potato', 'Eggplant', 'Alaska pollock', 'Wheat'], 'species': ['Curimata cyprinoides', 'Curtisia dentata', 'Cybister limbatus', 'Gallus gallus', 'Triticum monococcum', 'Solanum tuberosum', 'Solanum stenotomum', 'Solanum malongena', 'Gadus chalcogrammus', 'Triticum aestivum'], 'other': ['Branquinha', 'Kulupi', 'Umlahleni', 'Cape Lancewood', 'Solanum stenotonum', 'Aubergine', 'Walleye pollock']}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#test import csv foodlist\n",
-    "from download_read import import_foodlist\n",
     "\n",
-    "foodlist = import_foodlist(\"Test food items.csv\")\n",
-    "print(foodlist)"
+    "foodlist = download_read.import_foodlist(\"Test food items.csv\")\n",
+    "foodlist"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "foodname\n",
-      "['Bocachico', 'Assegai tree', 'True water beetle', 'Chicken', 'Eincorn wheat grain', 'Potato ', 'Potato', 'Eggplant', 'Alaska pollock', 'Wheat']\n",
-      "species\n",
-      "['Curimata cyprinoides', 'Curtisia dentata', 'Cybister limbatus', 'Gallus gallus', 'Triticum monococcum', 'Solanum tuberosum', 'Solanum stenotomum', 'Solanum malongena', 'Gadus chalcogrammus', 'Triticum aestivum']\n",
-      "other\n",
-      "['Branquinha', 'Kulupi', 'Umlahleni', 'Cape Lancewood', 'Solanum stenotonum', 'Aubergine', 'Walleye pollock']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for list in foodlist:\n",
-    "    print(f\"{list}\")\n",
-    "    print(foodlist[list])"
+    "## this is just minor but it often breaks if you use a datatype (list) as a variable.. then we cant use 'list' to make lists\n",
+    "for namegroup in foodlist: \n",
+    "    print(f\"{namegroup}\")\n",
+    "    print(foodlist[namegroup])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#test list split to different columns and run all functions\n",
     "import download_read\n",
@@ -247,43 +280,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    filename           foodname species           othername  \\\n",
-      "0          x           Eggplant     NaN                 NaN   \n",
-      "1          x            Chicken     NaN                 NaN   \n",
-      "2          x  True water beetle     NaN                 NaN   \n",
-      "3          x     Alaska pollock     NaN                 NaN   \n",
-      "4          x          Bocachico     NaN                 NaN   \n",
-      "..       ...                ...     ...                 ...   \n",
-      "319        x                NaN     NaN     Walleye pollock   \n",
-      "320        x                NaN     NaN           Umlahleni   \n",
-      "321        x                NaN     NaN      Cape Lancewood   \n",
-      "322        x                NaN     NaN           Aubergine   \n",
-      "323        x                NaN     NaN  Solanum stenotonum   \n",
-      "\n",
-      "                   hazard  quote  location pos/neg  how  howquote  \n",
-      "0                 Warming  quote  location  posneg  how  howquote  \n",
-      "1                 Warming  quote  location  posneg  how  howquote  \n",
-      "2                 Warming  quote  location  posneg  how  howquote  \n",
-      "3                 Warming  quote  location  posneg  how  howquote  \n",
-      "4                 Warming  quote  location  posneg  how  howquote  \n",
-      "..                    ...    ...       ...     ...  ...       ...  \n",
-      "319  Natural cover change  quote  location  posneg  how  howquote  \n",
-      "320  Natural cover change  quote  location  posneg  how  howquote  \n",
-      "321  Natural cover change  quote  location  posneg  how  howquote  \n",
-      "322  Natural cover change  quote  location  posneg  how  howquote  \n",
-      "323  Natural cover change  quote  location  posneg  how  howquote  \n",
-      "\n",
-      "[324 rows x 10 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import download_read\n",
@@ -295,23 +294,23 @@
     "\n",
     "for hazard in hazards:\n",
     "   for list in foodlist:\n",
-    "      foods = foodlist[list]\n",
-    "      for food in foods:\n",
-    "                row_data = {\n",
-    "                    'filename': 'x',\n",
-    "                    list: food,\n",
-    "                    'hazard': hazard,\n",
-    "                    'quote': 'quote',\n",
-    "                    'location': 'location',\n",
-    "                    'pos/neg': 'posneg',\n",
-    "                    'how': 'how',\n",
-    "                    'howquote': 'howquote'\n",
-    "                }\n",
+    "        foods = foodlist[list]\n",
+    "        for food in foods:\n",
+    "            row_data = {\n",
+    "                'filename': 'x',\n",
+    "                list: food,\n",
+    "                'hazard': hazard,\n",
+    "                'quote': 'quote',\n",
+    "                'location': 'location',\n",
+    "                'pos/neg': 'posneg',\n",
+    "                'how': 'how',\n",
+    "                'howquote': 'howquote'\n",
+    "            }\n",
     "\n",
     "                # Append the row data to the results\n",
-    "                dfall = pd.concat([dfall, pd.DataFrame([row_data])], ignore_index=True)\n",
+    "            dfall = pd.concat([dfall, pd.DataFrame([row_data])], ignore_index=True)\n",
     "\n",
-    "print(dfall)"
+    "dfall"
    ]
   }
  ],
@@ -331,7 +330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
