update analyze paper notebok to compare w testset

--- a/710_tests.ipynb
+++ b/710_tests.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,17 +97,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Query: tuna+storm\n",
+      "\n",
+      "Google Scholar page 1 : 1 papers found\n",
+      "Searching paper 1 of 1 on Crossref...\n",
+      "Papers found on Crossref: 1/1\n",
+      "\n",
+      "\n",
+      "Using https://sci-hub.ee as Sci-Hub instance\n",
+      "Download 1 of 1 -> Performance of GPS slant total electron content and IRI-Plas-STEC for days with ionospheric disturbance\n",
+      "downloaded 1 of 1 papers\n",
+      "49.108895778656006\n"
+     ]
+    }
+   ],
    "source": [
     "#### TIMER COMPARISON AGAINST NON-PARALLEL PROCESSING\n",
     "start = time.time()\n",
     "\n",
-    "foods = ['tuna', 'rice', 'pear', 'apple', 'coffee', 'lettuce', 'beans']\n",
+    "foods = ['tuna']#, 'pear', 'apple', 'coffee', 'lettuce', 'beans']\n",
     "hazards = 'storm' #, ['drought', 'heatwave', 'warming', 'storm', 'flooding']\n",
     "scholar_pages = [1]\n",
-    "scholar_results = 3\n",
+    "scholar_results = 1\n",
     "\n",
     "for food in foods:\n",
     "    download_read.download_papers(food, hazards, scholar_pages, scholar_results, True)\n",
