files download in one folder, csv per search combo

--- a/710_tests.ipynb
+++ b/710_tests.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,27 +97,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Query: tuna+storm\n",
-      "\n",
-      "Google Scholar page 1 : 1 papers found\n",
-      "Searching paper 1 of 1 on Crossref...\n",
-      "Papers found on Crossref: 1/1\n",
-      "\n",
-      "\n",
-      "Using https://sci-hub.ee as Sci-Hub instance\n",
-      "Download 1 of 1 -> Performance of GPS slant total electron content and IRI-Plas-STEC for days with ionospheric disturbance\n",
-      "downloaded 1 of 1 papers\n",
-      "49.108895778656006\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#### TIMER COMPARISON AGAINST NON-PARALLEL PROCESSING\n",
     "start = time.time()\n",
@@ -229,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,6 +280,66 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "os: c:\\Users\\rsett\\Documents\\courses\\710B_food\\cliffs\n",
+      "Query: corn drought\n",
+      "\n",
+      "Google Scholar page 1 : 1 papers found\n",
+      "Searching paper 1 of 1 on Crossref...\n",
+      "Papers found on Crossref: 0/1\n",
+      "\n",
+      "\n",
+      "Using https://sci-hub.ee as Sci-Hub instance\n",
+      "Download 1 of 1 -> What happens within the corn plant when drought occurs\n",
+      "results dir c:\\Users\\rsett\\Documents\\courses\\710B_food\\cliffs/result.csv\n",
+      "downloaded 2 of 1 papers\n"
+     ]
+    }
+   ],
+   "source": [
+    "from PyPaperBot import __main__ as p\n",
+    "import os\n",
+    "import glob\n",
+    "\n",
+    "## test download - what happens with repeat pdfs ###\n",
+    "print(\"os:\", os.getcwd())\n",
+    "food = 'corn'\n",
+    "hazard = 'drought'\n",
+    "scholar_pages = [1]\n",
+    "scholar_results = 1\n",
+    "dwn_dir = os.getcwd() + \"/papers/\"\n",
+    "\n",
+    "# Create papers directory \n",
+    "os.makedirs(dwn_dir, exist_ok=True)\n",
+    "\n",
+    "# Make the query:\n",
+    "query = f'{food} {hazard}'\n",
+    "# Download papers from Google Scholar\n",
+    "p.start(query=query, scholar_pages=scholar_pages, scholar_results=scholar_results, dwn_dir=dwn_dir, proxy=[])\n",
+    "\n",
+    "pdfs = glob.glob(os.path.join(dwn_dir, '*.pdf'))\n",
+    "print('downloaded %d of %d papers' % (len(pdfs), scholar_results))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "folder_name = f'pdfs'\n",
+    "dwn_dir = os.path.join(os.getcwd(), folder_name)\n",
+    "dwn_dir\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -348,7 +390,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
