--- a/710_tests.ipynb
+++ b/710_tests.ipynb
@@ -288,22 +288,22 @@
      "output_type": "stream",
      "text": [
       "os: c:\\Users\\rsett\\Documents\\courses\\710B_food\\cliffs\n",
+      "starting bot 2...\n",
       "Query: corn drought\n",
       "\n",
       "Google Scholar page 1 : 1 papers found\n",
       "Searching paper 1 of 1 on Crossref...\n",
+      "papers What happens within the corn plant when drought occurs\n",
       "Papers found on Crossref: 0/1\n",
       "\n",
-      "\n",
-      "Using https://sci-hub.ee as Sci-Hub instance\n",
-      "Download 1 of 1 -> What happens within the corn plant when drought occurs\n",
-      "results dir c:\\Users\\rsett\\Documents\\courses\\710B_food\\cliffs/result.csv\n",
-      "downloaded 2 of 1 papers\n"
+      "already downloaded all files\n",
+      "downloaded 1 of 1 papers\n",
+      "Done\n"
      ]
     }
    ],
    "source": [
-    "from PyPaperBot import __main__ as p\n",
+    "from PyPaperBot2 import __main__ as p\n",
     "import os\n",
     "import glob\n",
     "\n",
@@ -324,7 +324,8 @@
     "p.start(query=query, scholar_pages=scholar_pages, scholar_results=scholar_results, dwn_dir=dwn_dir, proxy=[])\n",
     "\n",
     "pdfs = glob.glob(os.path.join(dwn_dir, '*.pdf'))\n",
-    "print('downloaded %d of %d papers' % (len(pdfs), scholar_results))\n"
+    "print('downloaded %d of %d papers' % (len(pdfs), scholar_results))\n",
+    "print(\"Done\")\n"
    ]
   },
   {
