fixed PDF Name csv for repeat downloads

--- a/710_tests.ipynb
+++ b/710_tests.ipynb
@@ -287,7 +287,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "os: c:\\Users\\rsett\\Documents\\courses\\710B_food\\cliffs\n",
+      "os: /Users/reneesetter/Food/cliffs\n",
       "starting bot 2...\n",
       "Query: corn drought\n",
       "\n",
@@ -296,7 +296,7 @@
       "papers What happens within the corn plant when drought occurs\n",
       "Papers found on Crossref: 0/1\n",
       "\n",
-      "already downloaded all files\n",
+      "Already downloaded all files\n",
       "downloaded 1 of 1 papers\n",
       "Done\n"
      ]
@@ -391,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
